cmake_minimum_required(VERSION 3.10)
project(BioInfo_Praktikum)

set(CMAKE_CXX_STANDARD 11)

include_directories(JudiciousCpp)
include_directories(JudiciousCppOptimized)
include_directories(kahypar/build)
include_directories(kahypar/build/kahypar)
include_directories(kahypar/external_tools/googletest/googlemock/include)
include_directories(kahypar/external_tools/googletest/googlemock/include/gmock)
include_directories(kahypar/external_tools/googletest/googlemock/include/gmock/internal)
include_directories(kahypar/external_tools/googletest/googlemock/include/gmock/internal/custom)
include_directories(kahypar/external_tools/googletest/googlemock/test)
include_directories(kahypar/external_tools/googletest/googletest/include)
include_directories(kahypar/external_tools/googletest/googletest/include/gtest)
include_directories(kahypar/external_tools/googletest/googletest/include/gtest/internal)
include_directories(kahypar/external_tools/googletest/googletest/include/gtest/internal/custom)
include_directories(kahypar/external_tools/googletest/googletest/samples)
include_directories(kahypar/external_tools/googletest/googletest/src)
include_directories(kahypar/external_tools/googletest/googletest/test)
include_directories(kahypar/external_tools/googletest/googletest/xcode/Samples/FrameworkSample)
include_directories(kahypar/external_tools/maximum_flow)
include_directories(kahypar/external_tools/maximum_flow/external_maximum_flow)
include_directories(kahypar/external_tools/maximum_flow/external_maximum_flow/bk)
include_directories(kahypar/external_tools/maximum_flow/external_maximum_flow/ibfs)
include_directories(kahypar/kahypar)
include_directories(kahypar/kahypar/application)
include_directories(kahypar/kahypar/datastructure)
include_directories(kahypar/kahypar/io)
include_directories(kahypar/kahypar/meta)
include_directories(kahypar/kahypar/partition)
include_directories(kahypar/kahypar/partition/coarsening)
include_directories(kahypar/kahypar/partition/coarsening/policies)
include_directories(kahypar/kahypar/partition/evolutionary)
include_directories(kahypar/kahypar/partition/initial_partitioning)
include_directories(kahypar/kahypar/partition/initial_partitioning/policies)
include_directories(kahypar/kahypar/partition/preprocessing)
include_directories(kahypar/kahypar/partition/preprocessing/policies)
include_directories(kahypar/kahypar/partition/refinement)
include_directories(kahypar/kahypar/partition/refinement/flow)
include_directories(kahypar/kahypar/partition/refinement/flow/policies)
include_directories(kahypar/kahypar/partition/refinement/policies)
include_directories(kahypar/kahypar/partition/registries)
include_directories(kahypar/kahypar/utils)
include_directories(kahypar/tests/datastructure)
include_directories(kahypar/tests/end_to_end)
include_directories(kahypar/tests/io)
include_directories(kahypar/tests/partition/coarsening)
include_directories(kahypar/tools)
include_directories(RepeatsCounter/src)

add_executable(BioInfo_Praktikum
        JudiciousCpp/Hypergraph.h
        JudiciousCpp/main.cpp
        JudiciousCpp/twiddle.cpp
        JudiciousCpp/twiddle.h
        JudiciousCppOptimized/Hypergraph.h
        JudiciousCppOptimized/main.cpp
        kahypar/build/kahypar/git_revision.h
        kahypar/external_tools/googletest/googlemock/include/gmock/internal/custom/gmock-generated-actions.h
        kahypar/external_tools/googletest/googlemock/include/gmock/internal/custom/gmock-matchers.h
        kahypar/external_tools/googletest/googlemock/include/gmock/internal/custom/gmock-port.h
        kahypar/external_tools/googletest/googlemock/include/gmock/internal/gmock-generated-internal-utils.h
        kahypar/external_tools/googletest/googlemock/include/gmock/internal/gmock-internal-utils.h
        kahypar/external_tools/googletest/googlemock/include/gmock/internal/gmock-port.h
        kahypar/external_tools/googletest/googlemock/include/gmock/gmock-actions.h
        kahypar/external_tools/googletest/googlemock/include/gmock/gmock-cardinalities.h
        kahypar/external_tools/googletest/googlemock/include/gmock/gmock-generated-actions.h
        kahypar/external_tools/googletest/googlemock/include/gmock/gmock-generated-function-mockers.h
        kahypar/external_tools/googletest/googlemock/include/gmock/gmock-generated-matchers.h
        kahypar/external_tools/googletest/googlemock/include/gmock/gmock-generated-nice-strict.h
        kahypar/external_tools/googletest/googlemock/include/gmock/gmock-matchers.h
        kahypar/external_tools/googletest/googlemock/include/gmock/gmock-more-actions.h
        kahypar/external_tools/googletest/googlemock/include/gmock/gmock-more-matchers.h
        kahypar/external_tools/googletest/googlemock/include/gmock/gmock-spec-builders.h
        kahypar/external_tools/googletest/googlemock/include/gmock/gmock.h
        kahypar/external_tools/googletest/googlemock/src/gmock-all.cc
        kahypar/external_tools/googletest/googlemock/src/gmock-cardinalities.cc
        kahypar/external_tools/googletest/googlemock/src/gmock-internal-utils.cc
        kahypar/external_tools/googletest/googlemock/src/gmock-matchers.cc
        kahypar/external_tools/googletest/googlemock/src/gmock-spec-builders.cc
        kahypar/external_tools/googletest/googlemock/src/gmock.cc
        kahypar/external_tools/googletest/googlemock/src/gmock_main.cc
        kahypar/external_tools/googletest/googlemock/test/gmock-actions_test.cc
        kahypar/external_tools/googletest/googlemock/test/gmock-cardinalities_test.cc
        kahypar/external_tools/googletest/googlemock/test/gmock-generated-actions_test.cc
        kahypar/external_tools/googletest/googlemock/test/gmock-generated-function-mockers_test.cc
        kahypar/external_tools/googletest/googlemock/test/gmock-generated-internal-utils_test.cc
        kahypar/external_tools/googletest/googlemock/test/gmock-generated-matchers_test.cc
        kahypar/external_tools/googletest/googlemock/test/gmock-internal-utils_test.cc
        kahypar/external_tools/googletest/googlemock/test/gmock-matchers_test.cc
        kahypar/external_tools/googletest/googlemock/test/gmock-more-actions_test.cc
        kahypar/external_tools/googletest/googlemock/test/gmock-nice-strict_test.cc
        kahypar/external_tools/googletest/googlemock/test/gmock-port_test.cc
        kahypar/external_tools/googletest/googlemock/test/gmock-spec-builders_test.cc
        kahypar/external_tools/googletest/googlemock/test/gmock_all_test.cc
        kahypar/external_tools/googletest/googlemock/test/gmock_ex_test.cc
        kahypar/external_tools/googletest/googlemock/test/gmock_leak_test_.cc
        kahypar/external_tools/googletest/googlemock/test/gmock_link2_test.cc
        kahypar/external_tools/googletest/googlemock/test/gmock_link_test.cc
        kahypar/external_tools/googletest/googlemock/test/gmock_link_test.h
        kahypar/external_tools/googletest/googlemock/test/gmock_output_test_.cc
        kahypar/external_tools/googletest/googlemock/test/gmock_stress_test.cc
        kahypar/external_tools/googletest/googlemock/test/gmock_test.cc
        kahypar/external_tools/googletest/googletest/codegear/gtest_all.cc
        kahypar/external_tools/googletest/googletest/codegear/gtest_link.cc
        kahypar/external_tools/googletest/googletest/include/gtest/internal/custom/gtest-port.h
        kahypar/external_tools/googletest/googletest/include/gtest/internal/custom/gtest-printers.h
        kahypar/external_tools/googletest/googletest/include/gtest/internal/custom/gtest.h
        kahypar/external_tools/googletest/googletest/include/gtest/internal/gtest-death-test-internal.h
        kahypar/external_tools/googletest/googletest/include/gtest/internal/gtest-filepath.h
        kahypar/external_tools/googletest/googletest/include/gtest/internal/gtest-internal.h
        kahypar/external_tools/googletest/googletest/include/gtest/internal/gtest-linked_ptr.h
        kahypar/external_tools/googletest/googletest/include/gtest/internal/gtest-param-util-generated.h
        kahypar/external_tools/googletest/googletest/include/gtest/internal/gtest-param-util.h
        kahypar/external_tools/googletest/googletest/include/gtest/internal/gtest-port-arch.h
        kahypar/external_tools/googletest/googletest/include/gtest/internal/gtest-port.h
        kahypar/external_tools/googletest/googletest/include/gtest/internal/gtest-string.h
        kahypar/external_tools/googletest/googletest/include/gtest/internal/gtest-tuple.h
        kahypar/external_tools/googletest/googletest/include/gtest/internal/gtest-type-util.h
        kahypar/external_tools/googletest/googletest/include/gtest/gtest-death-test.h
        kahypar/external_tools/googletest/googletest/include/gtest/gtest-message.h
        kahypar/external_tools/googletest/googletest/include/gtest/gtest-param-test.h
        kahypar/external_tools/googletest/googletest/include/gtest/gtest-printers.h
        kahypar/external_tools/googletest/googletest/include/gtest/gtest-spi.h
        kahypar/external_tools/googletest/googletest/include/gtest/gtest-test-part.h
        kahypar/external_tools/googletest/googletest/include/gtest/gtest-typed-test.h
        kahypar/external_tools/googletest/googletest/include/gtest/gtest.h
        kahypar/external_tools/googletest/googletest/include/gtest/gtest_pred_impl.h
        kahypar/external_tools/googletest/googletest/include/gtest/gtest_prod.h
        kahypar/external_tools/googletest/googletest/samples/prime_tables.h
        kahypar/external_tools/googletest/googletest/samples/sample1.cc
        kahypar/external_tools/googletest/googletest/samples/sample1.h
        kahypar/external_tools/googletest/googletest/samples/sample10_unittest.cc
        kahypar/external_tools/googletest/googletest/samples/sample1_unittest.cc
        kahypar/external_tools/googletest/googletest/samples/sample2.cc
        kahypar/external_tools/googletest/googletest/samples/sample2.h
        kahypar/external_tools/googletest/googletest/samples/sample2_unittest.cc
        kahypar/external_tools/googletest/googletest/samples/sample3-inl.h
        kahypar/external_tools/googletest/googletest/samples/sample3_unittest.cc
        kahypar/external_tools/googletest/googletest/samples/sample4.cc
        kahypar/external_tools/googletest/googletest/samples/sample4.h
        kahypar/external_tools/googletest/googletest/samples/sample4_unittest.cc
        kahypar/external_tools/googletest/googletest/samples/sample5_unittest.cc
        kahypar/external_tools/googletest/googletest/samples/sample6_unittest.cc
        kahypar/external_tools/googletest/googletest/samples/sample7_unittest.cc
        kahypar/external_tools/googletest/googletest/samples/sample8_unittest.cc
        kahypar/external_tools/googletest/googletest/samples/sample9_unittest.cc
        kahypar/external_tools/googletest/googletest/src/gtest-all.cc
        kahypar/external_tools/googletest/googletest/src/gtest-death-test.cc
        kahypar/external_tools/googletest/googletest/src/gtest-filepath.cc
        kahypar/external_tools/googletest/googletest/src/gtest-internal-inl.h
        kahypar/external_tools/googletest/googletest/src/gtest-port.cc
        kahypar/external_tools/googletest/googletest/src/gtest-printers.cc
        kahypar/external_tools/googletest/googletest/src/gtest-test-part.cc
        kahypar/external_tools/googletest/googletest/src/gtest-typed-test.cc
        kahypar/external_tools/googletest/googletest/src/gtest.cc
        kahypar/external_tools/googletest/googletest/src/gtest_main.cc
        kahypar/external_tools/googletest/googletest/test/gtest-death-test_ex_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest-death-test_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest-filepath_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest-linked_ptr_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest-listener_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest-message_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest-options_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest-param-test2_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest-param-test_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest-param-test_test.h
        kahypar/external_tools/googletest/googletest/test/gtest-port_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest-printers_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest-test-part_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest-tuple_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest-typed-test2_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest-typed-test_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest-typed-test_test.h
        kahypar/external_tools/googletest/googletest/test/gtest-unittest-api_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest_all_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest_break_on_failure_unittest_.cc
        kahypar/external_tools/googletest/googletest/test/gtest_catch_exceptions_test_.cc
        kahypar/external_tools/googletest/googletest/test/gtest_color_test_.cc
        kahypar/external_tools/googletest/googletest/test/gtest_env_var_test_.cc
        kahypar/external_tools/googletest/googletest/test/gtest_environment_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest_filter_unittest_.cc
        kahypar/external_tools/googletest/googletest/test/gtest_help_test_.cc
        kahypar/external_tools/googletest/googletest/test/gtest_list_tests_unittest_.cc
        kahypar/external_tools/googletest/googletest/test/gtest_main_unittest.cc
        kahypar/external_tools/googletest/googletest/test/gtest_no_test_unittest.cc
        kahypar/external_tools/googletest/googletest/test/gtest_output_test_.cc
        kahypar/external_tools/googletest/googletest/test/gtest_pred_impl_unittest.cc
        kahypar/external_tools/googletest/googletest/test/gtest_premature_exit_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest_prod_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest_repeat_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest_shuffle_test_.cc
        kahypar/external_tools/googletest/googletest/test/gtest_sole_header_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest_stress_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest_throw_on_failure_ex_test.cc
        kahypar/external_tools/googletest/googletest/test/gtest_throw_on_failure_test_.cc
        kahypar/external_tools/googletest/googletest/test/gtest_uninitialized_test_.cc
        kahypar/external_tools/googletest/googletest/test/gtest_unittest.cc
        kahypar/external_tools/googletest/googletest/test/gtest_xml_outfile1_test_.cc
        kahypar/external_tools/googletest/googletest/test/gtest_xml_outfile2_test_.cc
        kahypar/external_tools/googletest/googletest/test/gtest_xml_output_unittest_.cc
        kahypar/external_tools/googletest/googletest/test/production.cc
        kahypar/external_tools/googletest/googletest/test/production.h
        kahypar/external_tools/googletest/googletest/xcode/Samples/FrameworkSample/widget.cc
        kahypar/external_tools/googletest/googletest/xcode/Samples/FrameworkSample/widget.h
        kahypar/external_tools/googletest/googletest/xcode/Samples/FrameworkSample/widget_test.cc
        kahypar/external_tools/maximum_flow/external_maximum_flow/bk/block.h
        kahypar/external_tools/maximum_flow/external_maximum_flow/bk/graph.h
        kahypar/external_tools/maximum_flow/external_maximum_flow/ibfs/ibfs.h
        kahypar/kahypar/application/command_line_options.h
        kahypar/kahypar/application/kahypar.cc
        kahypar/kahypar/datastructure/binary_heap.h
        kahypar/kahypar/datastructure/bucket_queue.h
        kahypar/kahypar/datastructure/connectivity_sets.h
        kahypar/kahypar/datastructure/fast_reset_array.h
        kahypar/kahypar/datastructure/fast_reset_flag_array.h
        kahypar/kahypar/datastructure/flow_network.h
        kahypar/kahypar/datastructure/graph.h
        kahypar/kahypar/datastructure/hash_table.h
        kahypar/kahypar/datastructure/hypergraph.h
        kahypar/kahypar/datastructure/kway_priority_queue.h
        kahypar/kahypar/datastructure/sparse_map.h
        kahypar/kahypar/datastructure/sparse_set.h
        kahypar/kahypar/io/hypergraph_io.h
        kahypar/kahypar/io/partitioning_output.h
        kahypar/kahypar/io/sql_plottools_serializer.h
        kahypar/kahypar/meta/abstract_factory.h
        kahypar/kahypar/meta/empty.h
        kahypar/kahypar/meta/function_traits.h
        kahypar/kahypar/meta/int_to_type.h
        kahypar/kahypar/meta/mandatory.h
        kahypar/kahypar/meta/pack_expand.h
        kahypar/kahypar/meta/policy_registry.h
        kahypar/kahypar/meta/registrar.h
        kahypar/kahypar/meta/select.h
        kahypar/kahypar/meta/static_double_dispatch_factory.h
        kahypar/kahypar/meta/static_multi_dispatch_factory.h
        kahypar/kahypar/meta/template_parameter_to_string.h
        kahypar/kahypar/meta/typelist.h
        kahypar/kahypar/partition/coarsening/policies/fixed_vertex_acceptance_policy.h
        kahypar/kahypar/partition/coarsening/policies/rating_acceptance_policy.h
        kahypar/kahypar/partition/coarsening/policies/rating_community_policy.h
        kahypar/kahypar/partition/coarsening/policies/rating_heavy_node_penalty_policy.h
        kahypar/kahypar/partition/coarsening/policies/rating_partition_policy.h
        kahypar/kahypar/partition/coarsening/policies/rating_score_policy.h
        kahypar/kahypar/partition/coarsening/policies/rating_tie_breaking_policy.h
        kahypar/kahypar/partition/coarsening/coarsener_base.h
        kahypar/kahypar/partition/coarsening/coarsening_memento.h
        kahypar/kahypar/partition/coarsening/do_nothing_coarsener.h
        kahypar/kahypar/partition/coarsening/full_vertex_pair_coarsener.h
        kahypar/kahypar/partition/coarsening/hypergraph_pruner.h
        kahypar/kahypar/partition/coarsening/i_coarsener.h
        kahypar/kahypar/partition/coarsening/lazy_vertex_pair_coarsener.h
        kahypar/kahypar/partition/coarsening/ml_coarsener.h
        kahypar/kahypar/partition/coarsening/vertex_pair_coarsener_base.h
        kahypar/kahypar/partition/coarsening/vertex_pair_rater.h
        kahypar/kahypar/partition/evolutionary/action.h
        kahypar/kahypar/partition/evolutionary/combine.h
        kahypar/kahypar/partition/evolutionary/diversifier.h
        kahypar/kahypar/partition/evolutionary/edge_frequency.h
        kahypar/kahypar/partition/evolutionary/individual.h
        kahypar/kahypar/partition/evolutionary/mutate.h
        kahypar/kahypar/partition/evolutionary/population.h
        kahypar/kahypar/partition/evolutionary/probability_tables.h
        kahypar/kahypar/partition/initial_partitioning/policies/ip_gain_computation_policy.h
        kahypar/kahypar/partition/initial_partitioning/policies/ip_greedy_queue_selection_policy.h
        kahypar/kahypar/partition/initial_partitioning/policies/ip_start_node_selection_policy.h
        kahypar/kahypar/partition/initial_partitioning/bfs_initial_partitioner.h
        kahypar/kahypar/partition/initial_partitioning/greedy_hypergraph_growing_initial_partitioner.h
        kahypar/kahypar/partition/initial_partitioning/i_initial_partitioner.h
        kahypar/kahypar/partition/initial_partitioning/initial_partitioner_base.h
        kahypar/kahypar/partition/initial_partitioning/initial_partitioning.h
        kahypar/kahypar/partition/initial_partitioning/label_propagation_initial_partitioner.h
        kahypar/kahypar/partition/initial_partitioning/pool_initial_partitioner.h
        kahypar/kahypar/partition/initial_partitioning/random_initial_partitioner.h
        kahypar/kahypar/partition/preprocessing/policies/min_hash_policy.h
        kahypar/kahypar/partition/preprocessing/adaptive_lsh.h
        kahypar/kahypar/partition/preprocessing/louvain.h
        kahypar/kahypar/partition/preprocessing/min_hash_sparsifier.h
        kahypar/kahypar/partition/preprocessing/modularity.h
        kahypar/kahypar/partition/preprocessing/single_node_hyperedge_remover.h
        kahypar/kahypar/partition/refinement/flow/policies/flow_execution_policy.h
        kahypar/kahypar/partition/refinement/flow/policies/flow_network_policy.h
        kahypar/kahypar/partition/refinement/flow/policies/flow_region_build_policy.h
        kahypar/kahypar/partition/refinement/flow/2way_flow_refiner.h
        kahypar/kahypar/partition/refinement/flow/flow_refiner_base.h
        kahypar/kahypar/partition/refinement/flow/kway_flow_refiner.h
        kahypar/kahypar/partition/refinement/flow/maximum_flow.h
        kahypar/kahypar/partition/refinement/flow/most_balanced_minimum_cut.h
        kahypar/kahypar/partition/refinement/flow/quotient_graph_block_scheduler.h
        kahypar/kahypar/partition/refinement/policies/fm_improvement_policy.h
        kahypar/kahypar/partition/refinement/policies/fm_stop_policy.h
        kahypar/kahypar/partition/refinement/2way_fm_flow_refiner.h
        kahypar/kahypar/partition/refinement/2way_fm_gain_cache.h
        kahypar/kahypar/partition/refinement/2way_fm_refiner.h
        kahypar/kahypar/partition/refinement/do_nothing_refiner.h
        kahypar/kahypar/partition/refinement/fm_refiner_base.h
        kahypar/kahypar/partition/refinement/gain_cache_element.h
        kahypar/kahypar/partition/refinement/i_refiner.h
        kahypar/kahypar/partition/refinement/kway_fm_cut_refiner.h
        kahypar/kahypar/partition/refinement/kway_fm_flow_refiner.h
        kahypar/kahypar/partition/refinement/kway_fm_gain_cache.h
        kahypar/kahypar/partition/refinement/kway_fm_km1_refiner.h
        kahypar/kahypar/partition/refinement/move.h
        kahypar/kahypar/partition/refinement/uncontraction_gain_changes.h
        kahypar/kahypar/partition/registries/register_coarsening_algorithms.h
        kahypar/kahypar/partition/registries/register_flow_networks.h
        kahypar/kahypar/partition/registries/register_initial_partitioning_algorithms.h
        kahypar/kahypar/partition/registries/register_policies.h
        kahypar/kahypar/partition/registries/register_refinement_algorithms.h
        kahypar/kahypar/partition/context.h
        kahypar/kahypar/partition/context_enum_classes.h
        kahypar/kahypar/partition/direct_kway.h
        kahypar/kahypar/partition/evo_partitioner.h
        kahypar/kahypar/partition/factories.h
        kahypar/kahypar/partition/fixed_vertices.h
        kahypar/kahypar/partition/initial_partition.h
        kahypar/kahypar/partition/metrics.h
        kahypar/kahypar/partition/multilevel.h
        kahypar/kahypar/partition/partitioner.h
        kahypar/kahypar/partition/recursive_bisection.h
        kahypar/kahypar/utils/float_compare.h
        kahypar/kahypar/utils/hash_vector.h
        kahypar/kahypar/utils/logger.h
        kahypar/kahypar/utils/math.h
        kahypar/kahypar/utils/randomize.h
        kahypar/kahypar/utils/stats.h
        kahypar/kahypar/utils/timer.h
        kahypar/kahypar/definitions.h
        kahypar/kahypar/kahypar.h
        kahypar/kahypar/macros.h
        kahypar/tests/datastructure/binary_heap_test.cc
        kahypar/tests/datastructure/flow_network_test.cc
        kahypar/tests/datastructure/graph_test.cc
        kahypar/tests/datastructure/hypergraph_test.cc
        kahypar/tests/datastructure/hypergraph_test_fixtures.h
        kahypar/tests/datastructure/kway_priority_queue_test.cc
        kahypar/tests/datastructure/priority_queue_test.cc
        kahypar/tests/datastructure/sparse_map_test.cc
        kahypar/tests/datastructure/sparse_set_test.cc
        kahypar/tests/end_to_end/kahypar_integration_tests.cc
        kahypar/tests/end_to_end/kahypar_test_fixtures.h
        kahypar/tests/io/hypergraph_io_test.cc
        kahypar/tests/io/hypergraph_io_test_fixtures.h
        kahypar/tests/meta/static_multi_dispatch_factory_test.cc
        kahypar/tests/partition/coarsening/full_vertex_pair_coarsener_test.cc
        kahypar/tests/partition/coarsening/lazy_vertex_pair_coarsener_test.cc
        kahypar/tests/partition/coarsening/vertex_pair_coarsener_test_fixtures.h
        kahypar/tests/partition/coarsening/vertex_pair_rater_test.cc
        kahypar/tests/partition/evolutionary/combine_test.cc
        kahypar/tests/partition/evolutionary/edge_frequency_test.cc
        kahypar/tests/partition/evolutionary/evo_partitioner_test.cc
        kahypar/tests/partition/evolutionary/individual_test.cc
        kahypar/tests/partition/evolutionary/mutation_test.cc
        kahypar/tests/partition/evolutionary/population_test.cc
        kahypar/tests/partition/evolutionary/probability_table_test.cc
        kahypar/tests/partition/initial_partitioning/bfs_partitioner_test.cc
        kahypar/tests/partition/initial_partitioning/gain_computation_test.cc
        kahypar/tests/partition/initial_partitioning/greedy_hypergraph_growing_functionality_test.cc
        kahypar/tests/partition/initial_partitioning/greedy_hypergraph_growing_partitioner_test.cc
        kahypar/tests/partition/initial_partitioning/greedy_queue_selection_test.cc
        kahypar/tests/partition/initial_partitioning/initial_partitioner_base_test.cc
        kahypar/tests/partition/initial_partitioning/label_propagation_functionality_test.cc
        kahypar/tests/partition/initial_partitioning/label_propagation_partitioner_test.cc
        kahypar/tests/partition/initial_partitioning/random_partitioner_test.cc
        kahypar/tests/partition/preprocessing/louvain_test.cc
        kahypar/tests/partition/preprocessing/sparsifier_test.cc
        kahypar/tests/partition/refinement/2way_flow_refiner_test.cc
        kahypar/tests/partition/refinement/k_way_fm_refiner_test.cc
        kahypar/tests/partition/refinement/kway_flow_refiner_test.cc
        kahypar/tests/partition/refinement/maximum_flow_test.cc
        kahypar/tests/partition/refinement/most_balanced_minimum_cut_test.cc
        kahypar/tests/partition/refinement/quotient_graph_block_scheduler_test.cc
        kahypar/tests/partition/refinement/two_way_fm_refiner_test.cc
        kahypar/tests/partition/fixed_vertex_test.cc
        kahypar/tests/partition/metrics_test.cc
        kahypar/tests/partition/partitioner_test.cc
        kahypar/tests/regression/kahypar_regression_tests.cc
        kahypar/tests/utils/math_test.cc
        kahypar/tools/bookshelf_to_hgr_converter.cc
        kahypar/tools/bookshelf_to_hgr_converter.h
        kahypar/tools/bookshelf_to_hgr_converter_test.cc
        kahypar/tools/cnf_to_hgr_conversion.h
        kahypar/tools/cnf_to_hgr_converter.cc
        kahypar/tools/cnf_to_hgr_converter_test.cc
        kahypar/tools/create_weighted_hgr.cc
        kahypar/tools/graph_to_hgr_converter.cc
        kahypar/tools/hgr_to_bipartite_graphml_converter.cc
        kahypar/tools/hgr_to_bipartite_metis_graph_converter.cc
        kahypar/tools/hgr_to_edge_list_conversion_test.cc
        kahypar/tools/hgr_to_edge_list_converter.cc
        kahypar/tools/hgr_to_edgelist_conversion.h
        kahypar/tools/hgr_to_hypergraphml_converter.cc
        kahypar/tools/hgr_to_patoh_converter.cc
        kahypar/tools/hmetis_lib_test.cc
        kahypar/tools/hypergraph_analyzer.cc
        kahypar/tools/hypergraph_statistics.cc
        kahypar/tools/lama_converter.cc
        kahypar/tools/mtx_to_hgr_conversion.cc
        kahypar/tools/mtx_to_hgr_conversion.h
        kahypar/tools/mtx_to_hgr_converter.cc
        kahypar/tools/mtx_to_hgr_converter_test.cc
        kahypar/tools/repeats_to_hgr_conversion.h
        kahypar/tools/repeats_to_hgr_conversion_test.cc
        kahypar/tools/repeats_to_hgr_converter.cc
        kahypar/tools/verify_partition.cc
        RepeatsCounter/src/RepeatsCounter.cpp
        RepeatsCounter/src/RepeatsCounter.hpp
        RepeatsCounter/tools/MSAConverter/src/convert.cpp
        RepeatsCounter/tools/RDDA/src/rdda.cpp)
